# socialteesjs

./: .gitignore  Cargo.toml  build.gradle.kts  settings.gradle.kts  socialtees-custom.js
.github/workflows/: update-pets.yml
data/: pets.json
gradle/: libs.versions.toml
src/: api.rs  main.rs  models.rs
src/main/kotlin/socialteesnyc/: AdoptapetApi.kt  Pet.kt  UpdatePetsCommand.kt
