[package]
name = "update-pets"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "update-pets"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# HTML entity decoding
htmlescape = "0.3"

# Regex for description cleanup
regex = "1"

# HTML to Markdown conversion
htmd = "0.5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async utilities for parallel fetching
futures = "0.3"
